<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpWasteCategorizer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="718dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_Welcomeback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35sp"
                    android:lineSpacingExtra="8sp"
                    android:text="@string/submit_image"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35sp"
                    android:text="@string/choose_an_image_to_upload"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#398B0C"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/imgv"
                    android:layout_width="300dp"
                    android:layout_height="266dp"

                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="20sp"
                    android:contentDescription="@string/user_to_upload_image"
                    app:srcCompat="@android:color/background_light" />

                <Button
                    android:id="@+id/chse"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="20sp"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="20sp"
                    android:paddingTop="10sp"
                    android:paddingRight="20sp"
                    android:paddingBottom="10sp"
                    android:text="@string/choose"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#398B0C"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/upld"
                    app:layout_constraintEnd_toStartOf="@+id/upld"
                    app:layout_constraintStart_toStartOf="parent" />

                <!--                <RadioGroup-->
                <!--                    android:id="@+id/rG"-->
                <!--                    android:layout_width="152dp"-->
                <!--                    android:layout_height="134dp"-->
                <!--                    android:layout_gravity="center_horizontal|center_vertical">-->

                <!--                    <RadioButton-->
                <!--                        android:id="@+id/radioButton1"-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:gravity="center_horizontal|center_vertical"-->
                <!--                        android:text="@string/organic_waste" />-->

                <!--                    <RadioButton-->
                <!--                        android:id="@+id/radioButton2"-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:gravity="center_horizontal|center_vertical"-->
                <!--                        android:text="@string/inorganic_waste" />-->

                <!--                    <RadioButton-->
                <!--                        android:id="@+id/radioButton3"-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:gravity="center_horizontal|center_vertical"-->
                <!--                        android:text="@string/not_sure" />-->
                <!--                </RadioGroup>-->

                <Button
                    android:id="@+id/upld"
                    android:layout_width="120sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="20sp"
                    android:layout_marginBottom="50sp"
                    android:paddingLeft="20sp"
                    android:paddingTop="10sp"
                    android:paddingRight="20sp"
                    android:paddingBottom="10sp"
                    android:text="@string/upload"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="#398B0C"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>